# tell_me_when

./: .gitignore  Cargo.toml  README.md
examples/: basic_usage.rs
src/: event_system.rs  events.rs  lib.rs  main.rs  traits.rs
src/handlers/: mod.rs  network.rs  power.rs  process.rs  system.rs
src/handlers/fs/: macos.rs  mod.rs  unix.rs  windows.rs
src/handlers/network/: macos.rs  mod.rs  unix.rs  windows.rs
src/handlers/process/: macos.rs  mod.rs  unix.rs  windows.rs
src/handlers/system/: mod.rs
tests/: filesystem_tests.rs  integration_tests.rs  network_tests.rs  power_tests.rs  process_tests.rs  system_tests.rs
